# HMolPol

./: .gitignore  1_mm_Z_Cut_XY_Dist_BW.C  1_mm_Z_Cut_XY_Dist_Naive.C  1_mm_Z_Cut_XY_Dist_Naive_BW.C  CMakeLists.txt  Compile_HMolPol.sh  Doxyfile  GetHMolPolVersion.cmake  HMolPol.cc  HMolPolRoot.cc  HMollerPol.cc  IntroToGDMLLayout  Momentum.C  README  Target_Z_Cut_Distribution_Back.C  Target_Z_Cut_Distribution_Back_BW.C  Target_Z_Cut_Distribution_Front.C  Target_Z_Cut_Distribution_Front_BW_C.d  Target_Z_Cut_Distribution_Symmetric.C  annotated.html  annotated.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen.css  files.html  files.js  functions.html  functions_func.html  functions_vars.html  gui.mac  hierarchy.html  hierarchy.js  icons.mac  index.html  main.cc  mainpage.dox  materials.gdml  (+11 more)
Analysis/: 1_mm_Z_Cut_XY_Dist.C  CrossSection.C  CrossSection_AnalyzingPower.C  ExtractFromRunInfo.h  ExtractInitalConditions.h  HelicalMotionCalculator.nb  Helix_Path_Info.C  Hit_XYdist_and_Zdist.C  Left_Right_Det_Naive_Primary.C  Left_Right_Det_Test.C  Phi_Int_vs_Phi_Hit.C  Radial_Distribution.C  Radius_vs_ThetaCM.C  Solenoid_MagneticField_Naive_Primary.C  Solenoid_MagneticField_Test.C  Target_Z_Cut_Distribution.C  Target_Z_Cut_Distribution_Symmetric_BW.C  XYDist_vs_ThetaCM.C
geometry/: HMolPolHTargetVolume.gdml  HMolPolMotherVolume.gdml  HMolPolMotherVolume_Dummy.gdml  HMolPolMotherVolume_HallA_Optics.gdml  HMolPolMotherVolume_LeftRight.gdml  HTargetVolume.gdml  HallA_Dipole.gdml  HallA_Optics.gdml  HallA_Q1.gdml  HallA_Q1Q4.gdml  HallA_Q2.gdml  HallA_Q2Q3.gdml  HallA_Q3.gdml  HallA_Q4.gdml  MotherVolume.gdml  detector.gdml  dipole.gdml  dummy.gdml  materials.gdml  solenoid.gdml
include/: HMolPolAnalysis.hh  HMolPolDetectorConstruction.hh  HMolPolEvent.hh  HMolPolEventAction.hh  HMolPolEventGenericDetector.hh  HMolPolEventGenericDetectorHit.hh  HMolPolEventLinkDef.hh  HMolPolEventPrimary.hh  HMolPolEventPrimaryConditions.hh  HMolPolEventPrimaryHit.hh  HMolPolEventUnits.hh  HMolPolFieldMap.hh  HMolPolGenericDetector.hh  HMolPolGenericDetectorHit.hh  HMolPolGenericDetectorSum.hh  HMolPolHSolenoidMagField.hh  HMolPolHSolenoidMagFieldWithFringe.hh  HMolPolLinkDef.hh  HMolPolMagField.hh  HMolPolMagFieldDipole.hh  HMolPolMagFieldMap.hh  HMolPolMagFieldMapBasic.hh  HMolPolMagFieldQuadrupole.hh  HMolPolMagFieldSolenoid.hh  HMolPolMagFieldUniform.hh  HMolPolMagneticField.hh  HMolPolMainEvent.hh  HMolPolMessenger.hh  HMolPolPrimaryGeneratorAction.hh  HMolPolPrimaryHit.hh  HMolPolRint.hh  (+4 more)
vis/: Qt.mac  (+1 more)
(+189 files in other folders)
